# github-copilot-groundschool

./: .gitignore  CODEOWNERS  LICENSE  README.md  SUPPORT.md
.devcontainer/cpp/: Dockerfile  devcontainer.json
.devcontainer/data_engineering/: devcontainer.json
.devcontainer/devops/: devcontainer.json
.devcontainer/dotnet/: devcontainer.json
.devcontainer/go/: devcontainer.json
.devcontainer/java/: devcontainer.json
.devcontainer/java_quarkus/: devcontainer.json
.devcontainer/java_springboot/: devcontainer.json
.devcontainer/javascript/: devcontainer.json
.devcontainer/javascript-node/: devcontainer.json
.devcontainer/node/: devcontainer.json
.devcontainer/php/: devcontainer.json
.devcontainer/python/: devcontainer.json
.devcontainer/typescript/: devcontainer.json
.devcontainer/typescript-node/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
Resources/: README.md
Tests/: DniControllerTests.cs
challenges/devops_application/: README.md
challenges/devops_kubernetesapp/: README.md
challenges/python_data_scientist/: README.md
completesolution/node_typescript/: package.json
completesolution/quarkus/: README.md
controllers/: DniController.cs
exercisefiles/: Exercises_data.md  Exercises_developer.md  Exercises_devops.md  README.md
exercisefiles/cpp/: CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
exercisefiles/cpp/src/: CMakeLists.txt  httpserver  main.cpp
exercisefiles/cpp/test/: CMakeLists.txt  tests.cpp
exercisefiles/cpp/tests/: CMakeLists.txt  tests  tests.cpp
exercisefiles/go/: go.mod  (+4 more)
(+100 files in other folders)
